# Freight-Back-Office-OS

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  RUN.md  SECOND_PASS_VALIDATION_AUDIT_2026-05-09.md  create_project_structure.ps1  docker-compose.yml  package-lock.json  package.json  project_structure_new.txt  pyproject.toml  render.yaml
.github/workflows/: playwright-e2e.yml  playwright.yml
backend/: alembic.ini  pytest.ini
backend/alembic/: env.py
backend/app/: lifespan.py  main.py
backend/scripts/: reset_db_and_seed.py  seed.py  seed_dashboard_demo.py  smoke_test.py
backend/tests/: conftest.py
business-assets/: invoice-followup-template.txt  invoice-template.md
data/seeds/: brokers.json  customer_accounts.json  drivers.json  organizations.json  service_plans.json  staff_users.json
docs/: load-detail-production-meltdown-fix.md
docs/api/: endpoint-contracts.md  openapi-notes.md  webhook-contracts.md
docs/architecture/: ai-integration.md  audit-and-observability.md  billing-architecture.md  channel-ingestion.md  domain-model.md  onboarding-architecture.md  security-model.md  system-overview.md  workflow-engine.md
docs/audits/: 2026-04-17-release-completeness-audit.md  pr42-multi-tenant-hardening.md
docs/compliance/: soc2-readiness-foundation.md
docs/demo/: DEMO_SCRIPT.md  SALES_DECK.md
docs/launch/: FINAL_LAUNCH_AUDIT.md  FINAL_SYSTEM_VALIDATION_AUDIT_2026-05-09.md  (+3 more)
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
scripts/: launch_gate.ps1
(+536 files in other folders)
